<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.monyhar.chrome.browser.suggestions.tile.TileGridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tile_grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_gravity="center_horizontal" />
