<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.monyhar.chrome.browser.ntp.IncognitoNewTabPageView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ntp_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:contentDescription="@string/accessibility_new_incognito_tab_page">

    <org.monyhar.chrome.browser.ntp.NewTabPageScrollView
        android:id="@+id/ntp_scrollview"
        android:background="@color/ntp_bg_incognito"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdgeLength="9dp"
        android:fillViewport="false"
        android:requiresFadingEdge="vertical" >

        <include layout="@layout/incognito_description_layout" />

    </org.monyhar.chrome.browser.ntp.NewTabPageScrollView>

</org.monyhar.chrome.browser.ntp.IncognitoNewTabPageView>
