<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.monyhar.chrome.browser.signin.ui.PersonalizedSigninPromoView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signin_promo_view_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/hairline_border_card_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingTop="14dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">

        <include layout="@layout/personalized_signin_promo_view_header"/>
    </FrameLayout>

    <include layout="@layout/personalized_signin_promo_view_body"/>

</org.monyhar.chrome.browser.signin.ui.PersonalizedSigninPromoView>